# Portfolio

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
AWS Lamda functions/: README.md  index.mjs  package.json
AWS Lamda functions/Emailer/: index.mjs  package-lock.json
AWS Lamda functions/GithubContribution/: index.mjs  package.json
AWS Lamda functions/ScienGPT/: index.mjs  package-lock.json  package.json
Frontend/: next-sitemap.config.js  next.config.mjs  package-lock.json  package.json
Frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Frontend/app/(default_site)/: layout.tsx  page.tsx
Frontend/app/(default_site)/blog/: layout.tsx  page.tsx
Frontend/app/(default_site)/blog/[slug]/: page.tsx
Frontend/app/lib/: constants.ts  definitions.ts  fonts.ts
Frontend/app/ui/: loaders.tsx
Frontend/app/ui/blog/: blog-card.tsx
Frontend/app/ui/components/: cursor-light.tsx  github-map.tsx  physics-compenets.tsx  scienGPT.tsx
Frontend/app/ui/landing/: CommunityWork.tsx  Contact.tsx  Flex.tsx  Hero.tsx  MoreAboutMe.tsx  Projects.tsx  Skills.tsx  UserInfo.tsx
Frontend/app/ui/universal/: Footer.tsx  Navbar.tsx
Frontend/app/utils/: getBlogData.ts
Frontend/public/: llms.txt  robots.txt  sitemap-0.xml  sitemap.xml
Frontend/public/blogs/a-light/content/: content.md
Frontend/public/blogs/google-oauth/content/: content.md
Frontend/public/blogs/my-pookie/content/: content.md
RAG/: README.md  data_ingestion.py  main.py  pyproject.toml  requirements.txt
RAG/data/: gpt_data.csv  gpt_data.json
RAG/scripts/: csv_to_json.py
(+5 files in other folders)
