[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.30.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "pinecone>=7.3.0",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]
